Added markdown formatting to event location

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -130,7 +130,7 @@
                     <div class="info-row">
                         <span class="fa fa-map-marker fa-fw"></span>
                         <p>
-                            {{ ev.location|linebreaksbr }}
+                            {{ ev.location|rich_text|linebreaksbr }}
                         </p>
                     </div>
                 {% endif %}
