--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/checkout_payment_form.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/checkout_payment_form.html
@@ -6,7 +6,15 @@
 {% endblocktrans %}</p>
 
 <address>
-    {{ details|linebreaksbr }}<br>
+    {% if settings.bank_details_type == "sepa" %}
+        {% trans "Account holder" %}: {{ settings.bank_details_sepa_name }}<br>
+        {% trans "IBAN" %}: {{ settings.bank_details_sepa_iban }}<br>
+        {% trans "BIC" %}: {{ settings.bank_details_sepa_bic }}<br>
+        {% trans "Bank" %}: {{ settings.bank_details_sepa_bank }}<br>
+    {% endif %}
+    {% if details %}
+        {{ details|linebreaksbr }}<br>
+    {% endif %}
     <strong>
         {% trans "We will assign you a personal reference code to use after you completed the order." %}
     </strong>
