--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -6,21 +6,36 @@
         {% csrf_token %}
         {% bootstrap_form_errors form %}
         <fieldset>
-            <legend>{% trans "Invoicing" %}</legend>
-            {% bootstrap_field form.invoice_address_asked layout="control" %}
-            {% bootstrap_field form.invoice_address_required layout="control" %}
-            {% bootstrap_field form.invoice_name_required layout="control" %}
+            <legend>{% trans "Invoice settings" %}</legend>
             {% bootstrap_field form.invoice_generate layout="control" %}
             {% bootstrap_field form.invoice_email_attachment layout="control" %}
-            {% bootstrap_field form.invoice_address_company_required layout="control" %}
-            {% bootstrap_field form.invoice_address_vatid layout="control" %}
-            {% bootstrap_field form.invoice_numbers_consecutive layout="control" %}
             {% bootstrap_field form.invoice_numbers_prefix layout="control" %}
-            {% bootstrap_field form.invoice_renderer layout="control" %}
+            {% bootstrap_field form.invoice_numbers_consecutive layout="control" %}
             {% bootstrap_field form.invoice_language layout="control" %}
             {% bootstrap_field form.invoice_include_free layout="control" %}
             {% bootstrap_field form.invoice_attendee_name layout="control" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Invoice address form" %}</legend>
+            {% bootstrap_field form.invoice_address_asked layout="control" %}
+            {% bootstrap_field form.invoice_address_required layout="control" %}
+            {% bootstrap_field form.invoice_name_required layout="control" %}
+            {% bootstrap_field form.invoice_address_company_required layout="control" %}
+            {% bootstrap_field form.invoice_address_vatid layout="control" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Your invoice details" %}</legend>
+            {% bootstrap_field form.invoice_address_from_name layout="control" %}
             {% bootstrap_field form.invoice_address_from layout="control" %}
+            {% bootstrap_field form.invoice_address_from_zipcode layout="control" %}
+            {% bootstrap_field form.invoice_address_from_city layout="control" %}
+            {% bootstrap_field form.invoice_address_from_country layout="control" %}
+            {% bootstrap_field form.invoice_address_from_tax_id layout="control" %}
+            {% bootstrap_field form.invoice_address_from_vat_id layout="control" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Invoice customization" %}</legend>
+            {% bootstrap_field form.invoice_renderer layout="control" %}
             {% bootstrap_field form.invoice_introductory_text layout="control" %}
             {% bootstrap_field form.invoice_additional_text layout="control" %}
             {% bootstrap_field form.invoice_footer_text layout="control" %}
